LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/GM_CLIENTS__x.object-meta.xml
<CustomObject>
    <description>GM_CLIENTS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_CLIENTS</externalName>
    <label>GM_CLIENTS</label>
    <pluralLabel>GM_CLIENTS</pluralLabel>
</CustomObject>