LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ACC_DIR__c.field-meta.xml
<CustomField>
    <fullName>ACC_DIR__c</fullName>
    <description>ACC_DIR</description>
    <externalDeveloperName>ACC_DIR</externalDeveloperName>
    <label>ACC_DIR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>