LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ACCOUNT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_TYPE__c</fullName>
    <description>ACCOUNT_TYPE</description>
    <externalDeveloperName>ACCOUNT_TYPE</externalDeveloperName>
    <label>ACCOUNT_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>