LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ACCT_ID__c.field-meta.xml
<CustomField>
    <fullName>ACCT_ID__c</fullName>
    <description>ACCT_ID</description>
    <externalDeveloperName>ACCT_ID</externalDeveloperName>
    <label>ACCT_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>