LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ANNUAL_TURN__c.field-meta.xml
<CustomField>
    <fullName>ANNUAL_TURN__c</fullName>
    <description>ANNUAL_TURN</description>
    <externalDeveloperName>ANNUAL_TURN</externalDeveloperName>
    <label>ANNUAL_TURN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>