LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ANS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ANS_TYPE__c</fullName>
    <description>ANS_TYPE</description>
    <externalDeveloperName>ANS_TYPE</externalDeveloperName>
    <label>ANS_TYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>