LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/APPR_DATE__c.field-meta.xml
<CustomField>
    <fullName>APPR_DATE__c</fullName>
    <description>APPR_DATE</description>
    <externalDeveloperName>APPR_DATE</externalDeveloperName>
    <label>APPR_DATE</label>
    <type>DateTime</type>
</CustomField>