LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/APPR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>APPR_FLAG__c</fullName>
    <description>APPR_FLAG</description>
    <externalDeveloperName>APPR_FLAG</externalDeveloperName>
    <label>APPR_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>