LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/APPR_PART_ID__c.field-meta.xml
<CustomField>
    <fullName>APPR_PART_ID__c</fullName>
    <description>APPR_PART_ID</description>
    <externalDeveloperName>APPR_PART_ID</externalDeveloperName>
    <label>APPR_PART_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>