LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ASSET_VAL__c.field-meta.xml
<CustomField>
    <fullName>ASSET_VAL__c</fullName>
    <description>ASSET_VAL</description>
    <externalDeveloperName>ASSET_VAL</externalDeveloperName>
    <label>ASSET_VAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>