LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/AUDITFLAG__c.field-meta.xml
<CustomField>
    <fullName>AUDITFLAG__c</fullName>
    <description>AUDITFLAG</description>
    <externalDeveloperName>AUDITFLAG</externalDeveloperName>
    <label>AUDITFLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>