LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CATEGORY__c</fullName>
    <description>CATEGORY</description>
    <externalDeveloperName>CATEGORY</externalDeveloperName>
    <label>CATEGORY</label>
    <length>25</length>
    <type>Text</type>
</CustomField>