LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CATEGORY_CX_GX__c.field-meta.xml
<CustomField>
    <fullName>CATEGORY_CX_GX__c</fullName>
    <description>CATEGORY_CX_GX</description>
    <externalDeveloperName>CATEGORY_CX_GX</externalDeveloperName>
    <label>CATEGORY_CX_GX</label>
    <length>8</length>
    <type>Text</type>
</CustomField>