LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL__c</fullName>
    <description>CHANNEL</description>
    <externalDeveloperName>CHANNEL</externalDeveloperName>
    <label>CHANNEL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>