LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CITY_ID__c.field-meta.xml
<CustomField>
    <fullName>CITY_ID__c</fullName>
    <description>CITY_ID</description>
    <externalDeveloperName>CITY_ID</externalDeveloperName>
    <label>CITY_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>