LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_ID__c</fullName>
    <description>CLIENT_ID</description>
    <externalDeveloperName>CLIENT_ID</externalDeveloperName>
    <label>CLIENT_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>