LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_MID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_MID__c</fullName>
    <description>CLIENT_MID</description>
    <externalDeveloperName>CLIENT_MID</externalDeveloperName>
    <label>CLIENT_MID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>