LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_NAME__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_NAME__c</fullName>
    <description>CLIENT_NAME</description>
    <externalDeveloperName>CLIENT_NAME</externalDeveloperName>
    <label>CLIENT_NAME</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>