LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_NATUROFBUSINESS__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_NATUROFBUSINESS__c</fullName>
    <description>CLIENT_NATUROFBUSINESS</description>
    <externalDeveloperName>CLIENT_NATUROFBUSINESS</externalDeveloperName>
    <label>CLIENT_NATUROFBUSINESS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>