LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_SER_LEADER__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_SER_LEADER__c</fullName>
    <description>CLIENT_SER_LEADER</description>
    <externalDeveloperName>CLIENT_SER_LEADER</externalDeveloperName>
    <label>CLIENT_SER_LEADER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>