LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_SERV_MANAGER__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_SERV_MANAGER__c</fullName>
    <description>CLIENT_SERV_MANAGER</description>
    <externalDeveloperName>CLIENT_SERV_MANAGER</externalDeveloperName>
    <label>CLIENT_SERV_MANAGER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>