LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_STATUS__c</fullName>
    <description>CLIENT_STATUS</description>
    <externalDeveloperName>CLIENT_STATUS</externalDeveloperName>
    <label>CLIENT_STATUS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>