LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_TYPE__c</fullName>
    <description>CLIENT_TYPE</description>
    <externalDeveloperName>CLIENT_TYPE</externalDeveloperName>
    <label>CLIENT_TYPE</label>
    <length>250</length>
    <type>Text</type>
</CustomField>