LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLIENTGROUPSFID__c.field-meta.xml
<CustomField>
    <fullName>CLIENTGROUPSFID__c</fullName>
    <description>CLIENTGROUPSFID</description>
    <externalDeveloperName>CLIENTGROUPSFID</externalDeveloperName>
    <label>CLIENTGROUPSFID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>