LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CLNT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CLNT_STATUS__c</fullName>
    <description>CLNT_STATUS</description>
    <externalDeveloperName>CLNT_STATUS</externalDeveloperName>
    <label>CLNT_STATUS</label>
    <length>150</length>
    <type>Text</type>
</CustomField>