LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CO_CGP__c.field-meta.xml
<CustomField>
    <fullName>CO_CGP__c</fullName>
    <description>CO_CGP</description>
    <externalDeveloperName>CO_CGP</externalDeveloperName>
    <label>CO_CGP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>