LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/COCSL1__c.field-meta.xml
<CustomField>
    <fullName>COCSL1__c</fullName>
    <description>COCSL1</description>
    <externalDeveloperName>COCSL1</externalDeveloperName>
    <label>COCSL1</label>
    <length>8</length>
    <type>Text</type>
</CustomField>