LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/COCSL2__c.field-meta.xml
<CustomField>
    <fullName>COCSL2__c</fullName>
    <description>COCSL2</description>
    <externalDeveloperName>COCSL2</externalDeveloperName>
    <label>COCSL2</label>
    <length>8</length>
    <type>Text</type>
</CustomField>