LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/COLLECT_INCHARGE__c.field-meta.xml
<CustomField>
    <fullName>COLLECT_INCHARGE__c</fullName>
    <description>COLLECT_INCHARGE</description>
    <externalDeveloperName>COLLECT_INCHARGE</externalDeveloperName>
    <label>COLLECT_INCHARGE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>