LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/COMP_ID__c.field-meta.xml
<CustomField>
    <fullName>COMP_ID__c</fullName>
    <description>COMP_ID</description>
    <externalDeveloperName>COMP_ID</externalDeveloperName>
    <label>COMP_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>