LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CONT_PERSON1__c.field-meta.xml
<CustomField>
    <fullName>CONT_PERSON1__c</fullName>
    <description>CONT_PERSON1</description>
    <externalDeveloperName>CONT_PERSON1</externalDeveloperName>
    <label>CONT_PERSON1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>