LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CONT_PERSON2__c.field-meta.xml
<CustomField>
    <fullName>CONT_PERSON2__c</fullName>
    <description>CONT_PERSON2</description>
    <externalDeveloperName>CONT_PERSON2</externalDeveloperName>
    <label>CONT_PERSON2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>