LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CORRIDORS__c.field-meta.xml
<CustomField>
    <fullName>CORRIDORS__c</fullName>
    <description>CORRIDORS</description>
    <externalDeveloperName>CORRIDORS</externalDeveloperName>
    <label>CORRIDORS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>