LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/COUNTRY_GTI__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_GTI__c</fullName>
    <description>COUNTRY_GTI</description>
    <externalDeveloperName>COUNTRY_GTI</externalDeveloperName>
    <label>COUNTRY_GTI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>