LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/COUNTRY_ID__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_ID__c</fullName>
    <description>COUNTRY_ID</description>
    <externalDeveloperName>COUNTRY_ID</externalDeveloperName>
    <label>COUNTRY_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>