LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/COUNTRYHQ__c.field-meta.xml
<CustomField>
    <fullName>COUNTRYHQ__c</fullName>
    <description>COUNTRYHQ</description>
    <externalDeveloperName>COUNTRYHQ</externalDeveloperName>
    <label>COUNTRYHQ</label>
    <length>8</length>
    <type>Text</type>
</CustomField>