LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CSL_ID__c.field-meta.xml
<CustomField>
    <fullName>CSL_ID__c</fullName>
    <description>CSL_ID</description>
    <externalDeveloperName>CSL_ID</externalDeveloperName>
    <label>CSL_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>