LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CURR_FEES__c.field-meta.xml
<CustomField>
    <fullName>CURR_FEES__c</fullName>
    <description>CURR_FEES</description>
    <externalDeveloperName>CURR_FEES</externalDeveloperName>
    <label>CURR_FEES</label>
    <length>8</length>
    <type>Text</type>
</CustomField>