LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/CURR_PROFITIBILITY__c.field-meta.xml
<CustomField>
    <fullName>CURR_PROFITIBILITY__c</fullName>
    <description>CURR_PROFITIBILITY</description>
    <externalDeveloperName>CURR_PROFITIBILITY</externalDeveloperName>
    <label>CURR_PROFITIBILITY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>