LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/DYNAMIC_FLAG__c.field-meta.xml
<CustomField>
    <fullName>DYNAMIC_FLAG__c</fullName>
    <description>DYNAMIC_FLAG</description>
    <externalDeveloperName>DYNAMIC_FLAG</externalDeveloperName>
    <label>DYNAMIC_FLAG</label>
    <length>8</length>
    <type>Text</type>
</CustomField>