LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ENTITY_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ENTITY_TYPE__c</fullName>
    <description>ENTITY_TYPE</description>
    <externalDeveloperName>ENTITY_TYPE</externalDeveloperName>
    <label>ENTITY_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>