LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/EVENTNAME__c.field-meta.xml
<CustomField>
    <fullName>EVENTNAME__c</fullName>
    <description>EVENTNAME</description>
    <externalDeveloperName>EVENTNAME</externalDeveloperName>
    <label>EVENTNAME</label>
    <length>250</length>
    <type>Text</type>
</CustomField>