LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/EXCHG_LIST_ON__c.field-meta.xml
<CustomField>
    <fullName>EXCHG_LIST_ON__c</fullName>
    <description>EXCHG_LIST_ON</description>
    <externalDeveloperName>EXCHG_LIST_ON</externalDeveloperName>
    <label>EXCHG_LIST_ON</label>
    <length>250</length>
    <type>Text</type>
</CustomField>