LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/EXPECTED_TOBE__c.field-meta.xml
<CustomField>
    <fullName>EXPECTED_TOBE__c</fullName>
    <description>EXPECTED_TOBE</description>
    <externalDeveloperName>EXPECTED_TOBE</externalDeveloperName>
    <label>EXPECTED_TOBE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>