LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/FAX_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>FAX_NUMBER__c</fullName>
    <description>FAX_NUMBER</description>
    <externalDeveloperName>FAX_NUMBER</externalDeveloperName>
    <label>FAX_NUMBER</label>
    <length>25</length>
    <type>Text</type>
</CustomField>