LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/FIRMOFFLOC__c.field-meta.xml
<CustomField>
    <fullName>FIRMOFFLOC__c</fullName>
    <description>FIRMOFFLOC</description>
    <externalDeveloperName>FIRMOFFLOC</externalDeveloperName>
    <label>FIRMOFFLOC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>