LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IMAGE_ID__c.field-meta.xml
<CustomField>
    <fullName>IMAGE_ID__c</fullName>
    <description>IMAGE_ID</description>
    <externalDeveloperName>IMAGE_ID</externalDeveloperName>
    <label>IMAGE_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>