LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IND_FIRM_REF_PER_OFFICE__c.field-meta.xml
<CustomField>
    <fullName>IND_FIRM_REF_PER_OFFICE__c</fullName>
    <description>IND_FIRM_REF_PER_OFFICE</description>
    <externalDeveloperName>IND_FIRM_REF_PER_OFFICE</externalDeveloperName>
    <label>IND_FIRM_REF_PER_OFFICE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>