LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/INDUSTRY_ID_TWO__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRY_ID_TWO__c</fullName>
    <description>INDUSTRY_ID_TWO</description>
    <externalDeveloperName>INDUSTRY_ID_TWO</externalDeveloperName>
    <label>INDUSTRY_ID_TWO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>