LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/INT_REFFIRMNAME__c.field-meta.xml
<CustomField>
    <fullName>INT_REFFIRMNAME__c</fullName>
    <description>INT_REFFIRMNAME</description>
    <externalDeveloperName>INT_REFFIRMNAME</externalDeveloperName>
    <label>INT_REFFIRMNAME</label>
    <length>250</length>
    <type>Text</type>
</CustomField>