LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/INTERMEDIATORY__c.field-meta.xml
<CustomField>
    <fullName>INTERMEDIATORY__c</fullName>
    <description>INTERMEDIATORY</description>
    <externalDeveloperName>INTERMEDIATORY</externalDeveloperName>
    <label>INTERMEDIATORY</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>