LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/INTERNAL_AUDITOR__c.field-meta.xml
<CustomField>
    <fullName>INTERNAL_AUDITOR__c</fullName>
    <description>INTERNAL_AUDITOR</description>
    <externalDeveloperName>INTERNAL_AUDITOR</externalDeveloperName>
    <label>INTERNAL_AUDITOR</label>
    <length>150</length>
    <type>Text</type>
</CustomField>