LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/INVESTORS__c.field-meta.xml
<CustomField>
    <fullName>INVESTORS__c</fullName>
    <description>INVESTORS</description>
    <externalDeveloperName>INVESTORS</externalDeveloperName>
    <label>INVESTORS</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>