LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_ABLY_ADPT_MKT_COND__c.field-meta.xml
<CustomField>
    <fullName>IS_ABLY_ADPT_MKT_COND__c</fullName>
    <description>IS_ABLY_ADPT_MKT_COND</description>
    <externalDeveloperName>IS_ABLY_ADPT_MKT_COND</externalDeveloperName>
    <label>IS_ABLY_ADPT_MKT_COND</label>
    <length>8</length>
    <type>Text</type>
</CustomField>