LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_CLIENT_BILL_ENTITY__c.field-meta.xml
<CustomField>
    <fullName>IS_CLIENT_BILL_ENTITY__c</fullName>
    <description>IS_CLIENT_BILL_ENTITY</description>
    <externalDeveloperName>IS_CLIENT_BILL_ENTITY</externalDeveloperName>
    <label>IS_CLIENT_BILL_ENTITY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>