LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_CLIENT_GTI_NON_IND__c.field-meta.xml
<CustomField>
    <fullName>IS_CLIENT_GTI_NON_IND__c</fullName>
    <description>IS_CLIENT_GTI_NON_IND</description>
    <externalDeveloperName>IS_CLIENT_GTI_NON_IND</externalDeveloperName>
    <label>IS_CLIENT_GTI_NON_IND</label>
    <length>8</length>
    <type>Text</type>
</CustomField>