LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_CONSENT__c.field-meta.xml
<CustomField>
    <fullName>IS_CONSENT__c</fullName>
    <description>IS_CONSENT</description>
    <externalDeveloperName>IS_CONSENT</externalDeveloperName>
    <label>IS_CONSENT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>