LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_CONTACT_CREATED__c.field-meta.xml
<CustomField>
    <fullName>IS_CONTACT_CREATED__c</fullName>
    <description>IS_CONTACT_CREATED</description>
    <externalDeveloperName>IS_CONTACT_CREATED</externalDeveloperName>
    <label>IS_CONTACT_CREATED</label>
    <length>2</length>
    <type>Text</type>
</CustomField>