LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_CURR_INT_OPERATION__c.field-meta.xml
<CustomField>
    <fullName>IS_CURR_INT_OPERATION__c</fullName>
    <description>IS_CURR_INT_OPERATION</description>
    <externalDeveloperName>IS_CURR_INT_OPERATION</externalDeveloperName>
    <label>IS_CURR_INT_OPERATION</label>
    <length>8</length>
    <type>Text</type>
</CustomField>