LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_DEALING_CPLX_EVNT__c.field-meta.xml
<CustomField>
    <fullName>IS_DEALING_CPLX_EVNT__c</fullName>
    <description>IS_DEALING_CPLX_EVNT</description>
    <externalDeveloperName>IS_DEALING_CPLX_EVNT</externalDeveloperName>
    <label>IS_DEALING_CPLX_EVNT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>