LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_GTI_REF__c.field-meta.xml
<CustomField>
    <fullName>IS_GTI_REF__c</fullName>
    <description>IS_GTI_REF</description>
    <externalDeveloperName>IS_GTI_REF</externalDeveloperName>
    <label>IS_GTI_REF</label>
    <length>8</length>
    <type>Text</type>
</CustomField>