LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_HIGH_PROFILE_BRAND__c.field-meta.xml
<CustomField>
    <fullName>IS_HIGH_PROFILE_BRAND__c</fullName>
    <description>IS_HIGH_PROFILE_BRAND</description>
    <externalDeveloperName>IS_HIGH_PROFILE_BRAND</externalDeveloperName>
    <label>IS_HIGH_PROFILE_BRAND</label>
    <length>8</length>
    <type>Text</type>
</CustomField>