LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_IMP_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>IS_IMP_INDUSTRY__c</fullName>
    <description>IS_IMP_INDUSTRY</description>
    <externalDeveloperName>IS_IMP_INDUSTRY</externalDeveloperName>
    <label>IS_IMP_INDUSTRY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>