LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_INTERNAL__c.field-meta.xml
<CustomField>
    <fullName>IS_INTERNAL__c</fullName>
    <description>IS_INTERNAL</description>
    <externalDeveloperName>IS_INTERNAL</externalDeveloperName>
    <label>IS_INTERNAL</label>
    <length>5</length>
    <type>Text</type>
</CustomField>