LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_NEW_CLIENT__c.field-meta.xml
<CustomField>
    <fullName>IS_NEW_CLIENT__c</fullName>
    <description>IS_NEW_CLIENT</description>
    <externalDeveloperName>IS_NEW_CLIENT</externalDeveloperName>
    <label>IS_NEW_CLIENT</label>
    <length>2</length>
    <type>Text</type>
</CustomField>