LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_NRCC_DONE__c.field-meta.xml
<CustomField>
    <fullName>IS_NRCC_DONE__c</fullName>
    <description>IS_NRCC_DONE</description>
    <externalDeveloperName>IS_NRCC_DONE</externalDeveloperName>
    <label>IS_NRCC_DONE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>