LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_OLD_RECORD__c.field-meta.xml
<CustomField>
    <fullName>IS_OLD_RECORD__c</fullName>
    <description>IS_OLD_RECORD</description>
    <externalDeveloperName>IS_OLD_RECORD</externalDeveloperName>
    <label>IS_OLD_RECORD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>