LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_OPEN_TO_VALUENSERVICES__c.field-meta.xml
<CustomField>
    <fullName>IS_OPEN_TO_VALUENSERVICES__c</fullName>
    <description>IS_OPEN_TO_VALUENSERVICES</description>
    <externalDeveloperName>IS_OPEN_TO_VALUENSERVICES</externalDeveloperName>
    <label>IS_OPEN_TO_VALUENSERVICES</label>
    <length>8</length>
    <type>Text</type>
</CustomField>