LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_PEINVESTOR__c.field-meta.xml
<CustomField>
    <fullName>IS_PEINVESTOR__c</fullName>
    <description>IS_PEINVESTOR</description>
    <externalDeveloperName>IS_PEINVESTOR</externalDeveloperName>
    <label>IS_PEINVESTOR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>