LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/IS_RELATED_GROUP__c.field-meta.xml
<CustomField>
    <fullName>IS_RELATED_GROUP__c</fullName>
    <description>IS_RELATED_GROUP</description>
    <externalDeveloperName>IS_RELATED_GROUP</externalDeveloperName>
    <label>IS_RELATED_GROUP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>