LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ISAMBITIOUS__c.field-meta.xml
<CustomField>
    <fullName>ISAMBITIOUS__c</fullName>
    <description>ISAMBITIOUS</description>
    <externalDeveloperName>ISAMBITIOUS</externalDeveloperName>
    <label>ISAMBITIOUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>