LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ISDYNAMICPEOPLE__c.field-meta.xml
<CustomField>
    <fullName>ISDYNAMICPEOPLE__c</fullName>
    <description>ISDYNAMICPEOPLE</description>
    <externalDeveloperName>ISDYNAMICPEOPLE</externalDeveloperName>
    <label>ISDYNAMICPEOPLE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>