LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/ISSENSEOFPURPOSE__c.field-meta.xml
<CustomField>
    <fullName>ISSENSEOFPURPOSE__c</fullName>
    <description>ISSENSEOFPURPOSE</description>
    <externalDeveloperName>ISSENSEOFPURPOSE</externalDeveloperName>
    <label>ISSENSEOFPURPOSE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>