LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/KAM_NONKAM__c.field-meta.xml
<CustomField>
    <fullName>KAM_NONKAM__c</fullName>
    <description>KAM_NONKAM</description>
    <externalDeveloperName>KAM_NONKAM</externalDeveloperName>
    <label>KAM_NONKAM</label>
    <length>8</length>
    <type>Text</type>
</CustomField>