LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/KEY_ACC_CATE__c.field-meta.xml
<CustomField>
    <fullName>KEY_ACC_CATE__c</fullName>
    <description>KEY_ACC_CATE</description>
    <externalDeveloperName>KEY_ACC_CATE</externalDeveloperName>
    <label>KEY_ACC_CATE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>