LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/KEY_ACCOUNT_GRP__c.field-meta.xml
<CustomField>
    <fullName>KEY_ACCOUNT_GRP__c</fullName>
    <description>KEY_ACCOUNT_GRP</description>
    <externalDeveloperName>KEY_ACCOUNT_GRP</externalDeveloperName>
    <label>KEY_ACCOUNT_GRP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>