LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/LANDLINE_NO__c.field-meta.xml
<CustomField>
    <fullName>LANDLINE_NO__c</fullName>
    <description>LANDLINE_NO</description>
    <externalDeveloperName>LANDLINE_NO</externalDeveloperName>
    <label>LANDLINE_NO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>