LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/NATURE_BUSINESS__c.field-meta.xml
<CustomField>
    <fullName>NATURE_BUSINESS__c</fullName>
    <description>NATURE_BUSINESS</description>
    <externalDeveloperName>NATURE_BUSINESS</externalDeveloperName>
    <label>NATURE_BUSINESS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>