LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/NATURE_OF_ASGMT__c.field-meta.xml
<CustomField>
    <fullName>NATURE_OF_ASGMT__c</fullName>
    <description>NATURE_OF_ASGMT</description>
    <externalDeveloperName>NATURE_OF_ASGMT</externalDeveloperName>
    <label>NATURE_OF_ASGMT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>