LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/NET_WORTH__c.field-meta.xml
<CustomField>
    <fullName>NET_WORTH__c</fullName>
    <description>NET_WORTH</description>
    <externalDeveloperName>NET_WORTH</externalDeveloperName>
    <label>NET_WORTH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>