LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/NEW_CLIENT_CR_DATE__c.field-meta.xml
<CustomField>
    <fullName>NEW_CLIENT_CR_DATE__c</fullName>
    <description>NEW_CLIENT_CR_DATE</description>
    <externalDeveloperName>NEW_CLIENT_CR_DATE</externalDeveloperName>
    <label>NEW_CLIENT_CR_DATE</label>
    <type>DateTime</type>
</CustomField>