LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/NEW_CLIENT_GROUP_NAME__c.field-meta.xml
<CustomField>
    <fullName>NEW_CLIENT_GROUP_NAME__c</fullName>
    <description>NEW_CLIENT_GROUP_NAME</description>
    <externalDeveloperName>NEW_CLIENT_GROUP_NAME</externalDeveloperName>
    <label>NEW_CLIENT_GROUP_NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>