LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/NRI_STATUS__c.field-meta.xml
<CustomField>
    <fullName>NRI_STATUS__c</fullName>
    <description>NRI_STATUS</description>
    <externalDeveloperName>NRI_STATUS</externalDeveloperName>
    <label>NRI_STATUS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>