LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/OFFICE_GTI__c.field-meta.xml
<CustomField>
    <fullName>OFFICE_GTI__c</fullName>
    <description>OFFICE_GTI</description>
    <externalDeveloperName>OFFICE_GTI</externalDeveloperName>
    <label>OFFICE_GTI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>