LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/OFFICE_IND_FIRM__c.field-meta.xml
<CustomField>
    <fullName>OFFICE_IND_FIRM__c</fullName>
    <description>OFFICE_IND_FIRM</description>
    <externalDeveloperName>OFFICE_IND_FIRM</externalDeveloperName>
    <label>OFFICE_IND_FIRM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>