LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/OLD_CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>OLD_CLIENT_ID__c</fullName>
    <description>OLD_CLIENT_ID</description>
    <externalDeveloperName>OLD_CLIENT_ID</externalDeveloperName>
    <label>OLD_CLIENT_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>