LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/OLD_CLIENT_NAME__c.field-meta.xml
<CustomField>
    <fullName>OLD_CLIENT_NAME__c</fullName>
    <description>OLD_CLIENT_NAME</description>
    <externalDeveloperName>OLD_CLIENT_NAME</externalDeveloperName>
    <label>OLD_CLIENT_NAME</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>