LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/OLD_GROUP_ID__c.field-meta.xml
<CustomField>
    <fullName>OLD_GROUP_ID__c</fullName>
    <description>OLD_GROUP_ID</description>
    <externalDeveloperName>OLD_GROUP_ID</externalDeveloperName>
    <label>OLD_GROUP_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>