LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/OLD_GROUP_NAME__c.field-meta.xml
<CustomField>
    <fullName>OLD_GROUP_NAME__c</fullName>
    <description>OLD_GROUP_NAME</description>
    <externalDeveloperName>OLD_GROUP_NAME</externalDeveloperName>
    <label>OLD_GROUP_NAME</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>