LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENTS__x/fields/OTHER_LEAD_SRC__c.field-meta.xml
<CustomField>
    <fullName>OTHER_LEAD_SRC__c</fullName>
    <description>OTHER_LEAD_SRC</description>
    <externalDeveloperName>OTHER_LEAD_SRC</externalDeveloperName>
    <label>OTHER_LEAD_SRC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>